Some kind of "fix" for header on mobile devices

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -441,3 +441,9 @@
     border: 1px solid transparent;
   }
 }
+
+@media (max-width: 767px) {
+  .hero {
+    padding-top: 98px;
+  }
+}
